--- a/bar/index.html
+++ b/bar/index.html
@@ -7,6 +7,24 @@
   </head>
   <body>
     <div class="canvas"></div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: 'AIzaSyB3BbTsYHh3JDcro_IZf71644G1LukkhjI',
+        authDomain: 'd3-project-8fc73.firebaseapp.com',
+        projectId: 'd3-project-8fc73',
+        storageBucket: 'd3-project-8fc73.appspot.com',
+        messagingSenderId: '286280770806',
+        appId: '1:286280770806:web:49aa65787f6d3fead2f8d7',
+        measurementId: 'G-0LEBYM7V7D',
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.js"></script>
     <script src="index.js"></script>
