--- a/bar/index.html
+++ b/bar/index.html
@@ -9,10 +9,12 @@
     <div class="canvas"></div>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
 
     <script>
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      // Firebase API key only identifies your project with Google's servers.
       var firebaseConfig = {
         apiKey: 'AIzaSyB3BbTsYHh3JDcro_IZf71644G1LukkhjI',
         authDomain: 'd3-project-8fc73.firebaseapp.com',
@@ -24,6 +26,8 @@
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
+      const db = firebase.firestore();
+      db.settings({ timestampsInSnapshots: true });
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.js"></script>
