--- a/bar/index.html
+++ b/bar/index.html
@@ -32,5 +32,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.js"></script>
     <script src="index.js"></script>
+    <script src="functions.js"></script>
   </body>
 </html>
